<resources>
    <string name="app_name">TeeShirtify</string>
    <string name="title_home">Browse</string>
    <string name="title_checkout">Checkout</string>
    <string name="yes">Yes</string>
    <string name="OK">OK</string>
    <string name="no">NO</string>
    <string name="buy">Buy</string>
    <string name="product_color">Color:</string>
    <string name="product_name">Name:</string>
    <string name="product_size">Size:</string>
    <string name="product_quantity">Quantity:</string>
    <string name="product_price">Price:</string>
    <string name="clear_basket">Clear Basket</string>
    <string name="place_order">Place Order</string>
    <string-array name="Sizes">
        <item>All</item>
        <item>XL</item>
        <item>M</item>
        <item>L</item>
        <item>x-large</item>
        <item>s</item>
    </string-array>
    <string-array name="colors">
        <item>All</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Green</item>
        <item>Blue</item>
        <item>White</item>
        <item>Red</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
